--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
-    "framer-motion": "^10.12.12",
+    "framer-motion": "4.1.17",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
